crates/formatter/tests/snapshots/snapshots__coder__migrations__000543_chat_status_remove_unused.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No-op: the removed enum values are not restored, matching prior art such
-- as 000377 and 000384. Restoring them would require another
-- rename-create-cast-drop cycle, and the data cannot be restored anyway:
-- rows remapped to 'running' or 'waiting' by the up migration keep their
-- new status.
