crates/formatter/tests/snapshots/snapshots__coder__migrations__000544_mcp_token_refresh_failure.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table mcp_server_user_tokens
	add column oauth_refresh_failure_reason text not null default '';
