crates/formatter/tests/snapshots/snapshots__coder__migrations__000545_chat_search_schema.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore the original trigger bodies from 000519.
create or replace function set_chat_message_revision_before()
returns trigger
language plpgsql
as $$
declare
	chat_snapshot_version bigint;
begin
	if TG_OP = 'INSERT' and NEW.revision is not null then
		raise exception 'chat_messages.revision must be assigned by trigger';
	end if;

	if TG_OP = 'UPDATE' then
		if OLD.chat_id is distinct from NEW.chat_id then
			raise exception 'chat_messages.chat_id is immutable';
		end if;

		if OLD.revision is distinct from NEW.revision then
			raise exception 'chat_messages.revision must be assigned by trigger';
		end if;

		if OLD is not distinct from NEW then
			return NEW;
		end if;
	end if;

	select snapshot_version
	into chat_snapshot_version
	from chats
	where id = NEW.chat_id;

	if chat_snapshot_version is null then
		raise exception 'chat % does not exist', NEW.chat_id;
	end if;

	new.revision = chat_snapshot_version;
	return NEW;
end;
$$;

create or replace function update_chat_history_after_message_update()
returns trigger
language plpgsql
as $$
begin
	update chats c
	set history_version = c.snapshot_version, generation_attempt = 0
	from (
		select distinct n.chat_id
		from chat_message_history_new_rows n
			join chat_message_history_old_rows o on o.id = n.id
		where o is distinct from n
	) as affected
	where
		c.id = affected.chat_id
		and (
			c.history_version is distinct from c.snapshot_version
			or c.generation_attempt <> 0
		);
	return null;
end;
$$;

drop index if exists idx_chat_diff_statuses_pr_title_fts;

drop index if exists idx_chats_title_fts;

drop index if exists idx_chat_messages_search_tsv_pending;

drop index if exists idx_chat_messages_search_tsv;

alter table chat_messages drop column if exists search_tsv;

drop function IF exists chat_message_search_text(jsonb);
