crates/formatter/tests/snapshots/snapshots__coder__migrations__000545_chat_search_schema.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create function chat_message_search_text(content jsonb)
returns text
language sql
immutable parallel SAFE
as $$
	select
		case
			when jsonb_typeof(content) = 'array'
				then (
					select string_agg(part ->> 'text', ' ' order by ordinality)
					from jsonb_array_elements(
						content
					) with ordinality as t(part, ordinality)
					where part ->> 'type' = 'text'
				)
		end
$$;

comment on function chat_message_search_text is 'Extracts searchable content from chat_messages. Returns NULL for scalar JSON strings (content_version=0). Immutable as it is used in indexes.';

-- Populated by a background sweep, not at insert time. NULL means pending.
alter table chat_messages add column search_tsv tsvector;

comment on column chat_messages.search_tsv is 'Used for full text search. NULL initially, populated async via background job.';

create index idx_chat_messages_search_tsv
	on chat_messages
	using gin(search_tsv)
	where
		(
			(search_tsv is not null)
			and (deleted = false)
			and (
				visibility
				= any(
					array[
						'user'::chat_message_visibility,
						'both'::chat_message_visibility
					]
				)
			)
			and (
				role
				= any(array['user'::chat_message_role, 'assistant'::chat_message_role])
			)
		);

comment on index idx_chat_messages_search_tsv is 'Partial index over chat_messages used for full text search. Only defined over ''searchable'' rows of chat_messages.';

create index idx_chat_messages_search_tsv_pending
	on chat_messages
	using btree (id desc)
	where
		(
			(search_tsv is null)
			and (deleted = false)
			and (
				visibility
				= any(
					array[
						'user'::chat_message_visibility,
						'both'::chat_message_visibility
					]
				)
			)
			and (
				role
				= any(array['user'::chat_message_role, 'assistant'::chat_message_role])
			)
		);

comment on index idx_chat_messages_search_tsv is 'Partial index over chat_messages used for populating search_tsv in the background. Only defined over ''searchable'' rows of chat_messages where search_tsv is NULL.';

create index idx_chats_title_fts
	on chats
	using gin(to_tsvector('simple', title));

comment on index idx_chats_title_fts is 'Used for full text search. Defined over all rows of the chats table.';

create index idx_chat_diff_statuses_pr_title_fts
	on chat_diff_statuses
	using gin(to_tsvector('simple', pull_request_title));

comment on index idx_chats_title_fts is 'Used for full text search. Defined over all rows of the chats table.';

create or replace function set_chat_message_revision_before()
returns trigger
language plpgsql
as $$
declare
	chat_snapshot_version bigint;
	cmp chat_messages;
begin
	if TG_OP = 'INSERT' and NEW.revision is not null then
		raise exception 'chat_messages.revision must be assigned by trigger';
	end if;

	if TG_OP = 'UPDATE' then
		if OLD.chat_id is distinct from NEW.chat_id then
			raise exception 'chat_messages.chat_id is immutable';
		end if;

		if OLD.revision is distinct from NEW.revision then
			raise exception 'chat_messages.revision must be assigned by trigger';
		end if;

		cmp := NEW;
		cmp.search_tsv := OLD.search_tsv;
		if OLD is not distinct from cmp then
			return NEW;
		end if;
	end if;

	select snapshot_version
	into chat_snapshot_version
	from chats
	where id = NEW.chat_id;

	if chat_snapshot_version is null then
		raise exception 'chat % does not exist', NEW.chat_id;
	end if;

	new.revision = chat_snapshot_version;
	return NEW;
end;
$$;

comment on function set_chat_message_revision_before is 'Component of chatd. Updates chat_snapshot_version when any fields of chat_messages change. Excludes changes to search_tsv as it is not relevant to chatd''s processing loop.';

create or replace function update_chat_history_after_message_update()
returns trigger
language plpgsql
as $$
begin
	update chats c
	set history_version = c.snapshot_version, generation_attempt = 0
	from (
		select distinct n.chat_id
		from chat_message_history_new_rows n
			join chat_message_history_old_rows o on o.id = n.id
		where
			(to_jsonb(o) - 'search_tsv') is distinct from (to_jsonb(n) - 'search_tsv')
	) as affected
	where
		c.id = affected.chat_id
		and (
			c.history_version is distinct from c.snapshot_version
			or c.generation_attempt <> 0
		);
	return null;
end;
$$;

comment on function update_chat_history_after_message_update is 'Component of chatd. Updates history_version and generation_attempt on chats when chat_messages is updated. Excludes changes to search_tsv.';
